responsive updates to add chart pagination indicator, adjust landscape view columns, fix expand/collapse arrow

--- a/src/app/home/charts.less
+++ b/src/app/home/charts.less
@@ -1,4 +1,4 @@
-@chart-item-height: 50%;
+@chart-item-height: 48%;
 @charts-padding: 15px;
 #charts {
   display: flex;
@@ -14,6 +14,15 @@
   background-color: rgba(255, 255, 255, 0.9);
   padding-top: @charts-padding;
   padding-bottom: @charts-padding;
+  #chart-item-holder{
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    left: 0;
+    min-width: 100%;
+    position: absolute;
+    top: 0;
+  }
   .chart-item:last-child{
     .chart-box{
       border-bottom-width: 0;
@@ -28,9 +37,9 @@
     padding: 10px;
     background-color: transparent;
     .grouping-title {
-        font-family: "Source Sans Pro", sans-serif;
-        font-size: 20px;
-      }
+      font-family: "Source Sans Pro", sans-serif;
+      font-size: 20px;
+    }
     //.dropdown {
     //  margin-bottom: 10px;
     //}
@@ -67,8 +76,10 @@
   }
   .toggle{
     display: none;
-    left: -21px;
+    left: 20px;
+    position: absolute;
     top: 20px;
+    z-index: 1000;
     .glyphicon-chevron-right{
       display: block;
     }
@@ -78,12 +89,55 @@
       display: none;
     }
   }
+  #chart-pagination{
+    display: none;
+    bottom: 25px;
+    left: 50%;
+    position: absolute;
+    .dot{
+      background-color: #000;
+      border-radius: 50%;
+      display: inline-block;
+      height: 10px;
+      margin-right: 5px;
+      opacity: 0.2;
+      width: 10px;
+      &:first-child{
+        opacity: .6;
+      }
+      &.active{
+        opacity: .6;
+      }
+    }
+  }
 }
 
 @media (max-width: @screen-sm-max){
   //styles for mobile landscape and tablet portrait
   #charts {
+    padding-left: 5px;
     .toggle{
+      display: block;
+    }
+    #chart-item-holder{
+      height: auto;
+      flex-flow: row wrap;
+      .chart-item{
+        height: 375px;
+        width: 290px;
+      }
+      .chart-box{
+        border: 0;
+      }
+      > .chart-item{
+        padding: 40px 10px;
+        .grouping-title {
+          font-size: 14px;
+          font-weight: 700;
+        }
+      }
+    }
+    #chart-pagination{
       display: block;
     }
     &.slide{
@@ -106,19 +160,25 @@
 
 @media (max-width: @screen-sm-max) and (orientation: portrait) {
   //styles for mobile portrait view -- charts appear at bottom of screen
-  #charts {
+  #charts{
     flex-flow: row nowrap;
     bottom: 0;
     right: auto;
-    width: 200%;
-    min-width: 100%;
+    width: 100%;
     height: 40%;
-    .chart-item {
-      height: 100%;
-      width: 50%;
-      //flex: 1 1 50%;
+    #chart-item-holder{
+      flex-flow: nowrap;
+      .chart-item {
+        height: 266px;
+        width: 355px;
+        //flex: 1 1 50%;
+      }
       .chart-box {
         border-bottom-width: 0;
+      }
+      > .chart-item{
+        padding: 30px 0;
+        width: 375px;
       }
     }
 
@@ -157,7 +217,12 @@
       }
     }
     .powered-by{
-      display: none;
+      bottom: 0;
+      left: 10px;
+      display: block;
+    }
+    #chart-pagination{
+      bottom: 18px;
     }
   }
 }
